errorcodes.py fails to detect duplicate uassert location 7760001

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2025-10-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The uassert location 7760001 is currently duplicated in src/mongo/scripting/mozjs/mongo.cpp. This suggests to me that there's a bug in buildscripts/errorcodes.py, which I would expect to disallow the duplication.

      Fix the bug in errorcodes.py, then deduplicate the uasserts by making one of them 7760000, which is not taken.

            Assignee:
            Ronald Steinke (Inactive)
            Reporter:
            James Bronsted
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: