SERVER-111402 Fix non-unique error codes in scripting/mozjs (#42891)

GitOrigin-RevId: ded10aad742dc1ced64076d265989f138b5ffe8d